# medlens

./: .env.example  .replit  README.md  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: deploy-vercel.yml
backend/app/: main.py  models.py
backend/app/agents/: pdf_agent.py  research.py  structuring.py
backend/app/routers/: api.py
backend/app/services/: mock_data.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  types.ts
frontend/src/components/: Layout.tsx  SearchSummary.tsx
frontend/src/pages/: AboutPage.tsx  ContactPage.tsx  HomePage.tsx  ResultsPage.tsx
