[project]
name = "meditrust"
version = "0.1.0"
description = "Medical literature intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.6.0",
    "reportlab>=4.2.0",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-core>=0.3.0",
]

[project.scripts]
meditrust = "backend.app.main:run"
